fix huge ping icon on small screens

--- a/src/styles/details-styles.css
+++ b/src/styles/details-styles.css
@@ -236,6 +236,15 @@
   .add-to-cart {
     max-width: 90%;
   }
+
+  .time-component {
+    font-size: 30px;
+  }
+
+  .time-component img {
+    height: 45px;
+    width: 45px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -245,6 +254,7 @@
 
   .time-component {
     font-size: 28px;
+    justify-content: center;
   }
 
   .time-component img {
@@ -285,5 +295,14 @@
 
   .short-description, .description-text {
     font-size: 14px;
+  }
+
+  .time-component {
+    font-size: 24px;
+  }
+
+  .time-component img {
+    height: 35px;
+    width: 35px;
   }
 }
